--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
+    "expo-checkbox": "~2.2.0",
+    "expo-constants": "^13.2.4",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-check-box": "^2.1.7",
+    "react-native-elements": "^3.4.2",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-syntax-highlighter": "^2.1.0",
+    "react-redux": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
